src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* ------------ Variables ----------- */
:root {
  --background: #ffffff;
  --foreground: #1e293b;
  --headerHeight: 72px;
  --footerHeight: 69px; /* + border 1px */
}

@media (max-width: 767px) {
  :root {
    --footerHeight: 85px; /* + border 1px */
  }
}

/* ------------ Global style ----------- */
html {
  max-width: 100vw;
  height: 100%;
  overflow-x: hidden;
}

body {
  height: 100%;
  min-height: 100vh;
}

body, 
header,
footer {
  min-width: 320px; /* 최소 너비 설정 */
  width: 100%; 
  overflow-x: auto;
}

main {
  width: 100%;
  min-height: calc(100vh - var(--headerHeight) - var(--footerHeight));
  margin-top: var(--headerHeight);
  z-index: 10;
}

body {
  color: var(--foreground);
  background: var(--background);
  font-family: 'NanumGothic', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

input:focus {
  outline: none;
}

/* ------------ fonts ----------- */
  @font-face {
    font-family: 'NanumGothic';
    font-weight: 300;
    font-display: swap;
    src: url("/fonts/NanumGothicLight.otf") format('otf'),
         url("/fonts/NanumGothicLight.ttf")  format('ttf');
  }

  @font-face {
    font-family: 'NanumGothic';
    font-weight: 400;
    font-display: swap;
    src: url("/fonts/NanumGothic.otf") format('otf'),
         url("/fonts/NanumGothic.ttf")  format('ttf');
  }

  @font-face {
    font-family: 'NanumGothic';
    font-weight: 700;
    font-display: swap;
    src: url("/fonts/NanumGothicBold.otf") format('otf'),
         url("/fonts/NanumGothicBold.ttf")  format('ttf');
  }

  @font-face {
    font-family: 'NanumGothic';
    font-weight: 900;
    font-display: swap;
    src: url("/fonts/NanumGothicExtraBold.otf") format('otf'),
         url("/fonts/NanumGothicExtraBold.ttf")  format('ttf');
  }

/* ------------ custom class ----------- */
.w-max {
  @apply w-full max-w-5xl mx-auto px-4 md:px-8 flex justify-between items-center;
}

.h-min {
  @apply min-h-[calc(100vh-var(--headerHeight)-var(--footerHeight))];
}

.h-header {
  @apply h-[72px];
}

.ellipsis-1 {
  @apply text-ellipsis overflow-hidden break-words line-clamp-1;
}

.ellipsis-4 {
  @apply text-ellipsis overflow-hidden break-words line-clamp-4;
}

.scrollbar-hidden {
  -ms-overflow-style: none; /* Internet Explorer 10+ */
  scrollbar-width: none; /* Firefox */
}

.scrollbar-hidden::-webkit-scrollbar {
  display: none; /* Chrome, Safari, Edge, Opera */
}

